<resources>
    <string name="app_name">Learn Kannada (Kannada Kali)</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeNote">Welcome to Kannada Kali</string>
    <string name="test">Test Text</string>
    <string name="easyKey">easyKey</string>
    <string name="certificateText">\t\t has successfully completed quiz \n(Level - %1$s) in the <b>\"Learn Kannada Smartapp\"</b> and secured %2$s.</string>
    <string name="user_name">%1$s Rohith</string>
    <string name="resultShareBody">Sharing result</string>
    <string name="helpShareBody">Share for help body...</string>
    <string-array name="flexi_words_array">
        <item>Beginner</item>
        <item>Numbers</item>
        <item>Greetings</item>
        <item>Days</item>
        <item>Time</item>
        <item>Directions</item>
        <item>Relationships</item>
        <item>Colors</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Body parts</item>
        <item>Back to School</item>
    </string-array>
    <string-array name="flexi_words_kanArray">
        <item>harikaara - ಹರಿಕಾರ</item>
        <item>sankyegaLu - ಸಂಖ್ಯೆಗಳು</item>
        <item>shubhaashayagaLu \n ಶುಭಾಶಯಗಳು</item>
        <item>dinagaLu - ದಿನಗಳು</item>
        <item>samaya - ಸಮಯ</item>
        <item>dikkugalu - ದಿಕ್ಕುಗಳು</item>
        <item>sambandhagaLu - ಸಂಬಂಧಗಳು</item>
        <item>baNNagaLu - ಬಣ್ಣಗಳು</item>
        <item>tarakaarigaLu - ತರಕಾರಿಗಳು</item>
        <item>haNNugaLu - ಹಣ್ಣುಗಳು</item>
        <item>dEhada bhaagagaLu \n ದೇಹದ ಭಾಗಗಳು</item>
        <item>maraLi shaalege - ಮರಳಿ ಶಾಲೆಗೆ</item>
    </string-array>
    <string-array name="flexi_conversations_array">
        <item>Conversation with Auto/Cab Driver</item>
        <item>Conversation with a new Maid</item>
        <item>Conversation with a regular Maid</item>
        <item>Conversation with a friend</item>
        <item>Conversation with Bus-conductor</item>
        <item>Conversation with vendor</item>
        <item>Conversation with Delivery boy</item>
        <item>Conversation to ask directions</item>
    </string-array>
    <string-array name="flexi_conversations_kanArray">
        <item>Auto/Cab chaalakara jothe maathukate</item>
        <item>hosa kelasadavara jothe maathukathe</item>
        <item>niyamitha kelasadavara jothe maathukathe</item>
        <item>Snehitara jothe maathukathe</item>
        <item>bus-conductor jothe maathukathe</item>
        <item>maaraatagaarara jothe maathukathe</item>
        <item>delivery boy jothe maathukathe</item>
        <item>dikkugalannu keluva maathukathe</item>
    </string-array>
    <string-array name="numbers_content">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Twenty</item>
        <item>Thirty</item>
        <item>Forty</item>
        <item>Fifty</item>
        <item>Sixty</item>
        <item>Seventy</item>
        <item>Eighty</item>
        <item>Ninety</item>
        <item>Hundred</item>
        <item>Two Hundred</item>
        <item>Three Hundred</item>
        <item>Four Hundred</item>
        <item>Five Hundred</item>
        <item>One Thousand</item>
        <item>One Lakh</item>
        <item>One Crore</item>
    </string-array>
    <string-array name="numbers_content_kannada">
        <item>ondu</item>
        <item>eradu</item>
        <item>mooru</item>
        <item>naalku</item>
        <item>aidu</item>
        <item>aaru</item>
        <item>Elu</item>
        <item>enTu</item>
        <item>ombattu</item>
        <item>hattu</item>
        <item>ippathu</item>
        <item>moovathu</item>
        <item>nalavatthu</item>
        <item>aivatthu</item>
        <item>aravatthu</item>
        <item>eppatthu</item>
        <item>embatthu</item>
        <item>thombatthu</item>
        <item>nooru</item>
        <item>innooru</item>
        <item>munnooru</item>
        <item>naanooru</item>
        <item>ainooru</item>
        <item>ondu saavira</item>
        <item>ondu laksha</item>
        <item>ondu kOTi</item>
    </string-array>
    <string-array name="numbers_content_Inkannada">
        <item>ಒಂದು - ೧</item>
        <item>ಎರಡು - ೨</item>
        <item>ಮೂರು - ೩</item>
        <item>ನಾಲ್ಕು - ೪</item>
        <item>ಐದು - ೫</item>
        <item>ಆರು - ೬</item>
        <item>ಏಳು - ೭</item>
        <item>ಎಂಟು - ೮</item>
        <item>ಒಂಬತ್ತು - ೯</item>
        <item>ಹತ್ತು - ೧೦</item>
        <item>ಇಪ್ಪತ್ತು - ೨೦</item>
        <item>ಮೂವತ್ತು - ೩೦</item>
        <item>ನಲವತ್ತು - ೪೦</item>
        <item>ಐವತ್ತು - ೫೦</item>
        <item>ಅರವತ್ತು - ೬೦</item>
        <item>ಎಪ್ಪತ್ತು - ೭೦</item>
        <item>ಎಂಬತ್ತು - ೮೦</item>
        <item>ತೊಂಬತ್ತು - ೯೦</item>
        <item>ನೂರು - ೧೦೦</item>
        <item>ಇನ್ನೂರು - ೨೦೦</item>
        <item>ಮುನ್ನೂರು - ೩೦೦</item>
        <item>ನಾನೂರು - ೪೦೦</item>
        <item>ಐನೂರು - ೫೦೦</item>
        <item>ಒಂದು ಸಾವಿರ - ೧,೦೦೦</item>
        <item>ಒಂದು ಲಕ್ಷ - ೧,೦೦,೦೦೦</item>
        <item>ಒಂದು ಕೋಟಿ - ೧,೦೦,೦೦,೦೦೦</item>
    </string-array>
    <string-array name="alphabets_content">
        <item>a</item>
        <item>aa</item>
        <item>e</item>
        <item>ee</item>
        <item>u</item>
        <item>uu</item>
        <item>ru</item>
        <item>ae</item>
        <item>aae</item>
        <item>ai</item>
        <item>o</item>
        <item>oo</item>
        <item>ow</item>
        <item>am</item>
        <item>aha</item>
        <item>ka</item>
        <item>kha</item>
        <item>ga</item>
        <item>gha</item>
        <item>nya</item>
        <item>cha</item>
        <item>Cha</item>
        <item>ja</item>
        <item>jha</item>
        <item>Nya</item>
        <item>ta</item>
        <item>Ta</item>
        <item>Da</item>
        <item>Dha</item>
        <item>Na</item>
        <item>tha</item>
        <item>Tha</item>
        <item>da</item>
        <item>dha</item>
        <item>na</item>
        <item>pa</item>
        <item>pha</item>
        <item>ba</item>
        <item>bha</item>
        <item>ma</item>
        <item>ya</item>
        <item>ra</item>
        <item>la</item>
        <item>va</item>
        <item>sha</item>
        <item>Sha</item>
        <item>sa</item>
        <item>ha</item>
        <item>La</item>
    </string-array>
    <string-array name="alphabets_content_kannada">
        <item>ಅ</item>
        <item>ಆ</item>
        <item>ಇ</item>
        <item>ಈ</item>
        <item>ಉ</item>
        <item>ಊ</item>
        <item>ಋ</item>
        <item>ಎ</item>
        <item>ಏ</item>
        <item>ಐ</item>
        <item>ಒ</item>
        <item>ಓ</item>
        <item>ಔ</item>
        <item>ಅಂ</item>
        <item>ಅಃ</item>
        <item>ಕ</item>
        <item>ಖ</item>
        <item>ಗ</item>
        <item>ಘ</item>
        <item>ಙ</item>
        <item>ಚ</item>
        <item>ಛ</item>
        <item>ಜ</item>
        <item>ಝ</item>
        <item>ಞ</item>
        <item>ಟ</item>
        <item>ಠ</item>
        <item>ಡ</item>
        <item>ಢ</item>
        <item>ಣ</item>
        <item>ತ</item>
        <item>ಥ</item>
        <item>ದ</item>
        <item>ಧ</item>
        <item>ನ</item>
        <item>ಪ</item>
        <item>ಫ</item>
        <item>ಬ</item>
        <item>ಭ</item>
        <item>ಮ</item>
        <item>ಯ</item>
        <item>ರ</item>
        <item>ಲ</item>
        <item>ವ</item>
        <item>ಶ</item>
        <item>ಷ</item>
        <item>ಸ</item>
        <item>ಹ</item>
        <item>ಳ</item>
    </string-array>
    <string-array name="beginner_content">
        <item>I</item>
        <item>We</item>
        <item>My</item>
        <item>Our</item>
        <item>For Me</item>
        <item>For Us</item>
        <item>Mine</item>
        <item>Ours</item>
        <item>You</item>
        <item>Your</item>
        <item>For You</item>
        <item>Yours</item>
        <item>He</item>
        <item>She</item>
        <item>They</item>
        <item>His</item>
        <item>Her</item>
        <item>Their</item>
        <item>For Him</item>
        <item>For Her</item>
        <item>For Them</item>
        <item>This or It</item>
        <item>That</item>
        <item>There</item>
        <item>Here</item>
    </string-array>
    <string-array name="beginner_content_kannada">
        <item>naanu</item>
        <item>naavu</item>
        <item>nanna</item>
        <item>namma</item>
        <item>nanage</item>
        <item>namage</item>
        <item>nannadu</item>
        <item>nammadu</item>
        <item>neenu(s)/neevu(p)</item>
        <item>ninna(s)/nimma(p)</item>
        <item>ninage(s)/nimage(p)</item>
        <item>ninnadu(s)/nimmadu(p)</item>
        <item>avanu</item>
        <item>avaLu</item>
        <item>avaru</item>
        <item>avanadu</item>
        <item>avaLadu</item>
        <item>avaradu</item>
        <item>avanige</item>
        <item>avaLige</item>
        <item>avarige</item>
        <item>idu</item>
        <item>adu</item>
        <item>alli</item>
        <item>illi</item>
    </string-array>
    <string name="aboutKannada">About Kannada</string>
    <string name="aboutKarnataka">About Karnataka</string>
    <string name="aboutHithAM">About HithAM</string>
    <string name="aboutVoiceArtist">Voice behind APP</string>
    <string name="rateText">Please take a moment to appreciate our efforts.</string>
    <string name="neverAsk">Never</string>
    <string name="remindLater">Later</string>
    <string name="rateNow">Sure</string>
    <string name="referFriends">Would you mind letting your friends know about the app?</string>
    <string name="sure">Sure</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="title_Varun">Varun <font color="#FFFFB300">A M</font></string>
    <string name="about_Varun">\tSoftware Developer by profession, photographer and keyboardist by passion.
     Key player in the app development </string>
    <string name="connect"><b><u>Contact us</u></b></string>
    <string name="developer">Developer</string>
    <string name="title_Rohith">Ro<font color="#FFF20F08">hith</font> S</string>
    <string name="about_Rohith">\tSoftware Developer by profession, adventure lover by passion. Key player in the app development</string>
    <string name="title_Pooja">Pooja H N</string>
    <string name="about_pooja">\tSoftware Developer by profession. She loves to travel and read novels! She is behind the voice of IWT and 90% of all others words and conversations.</string>
    <string name="voicesBehind"><u>Voices behind the app</u></string>
    <string name="title_ganesh">Ganesha R</string>
    <string name="about_ganesh">\tSoftware Engineer by profession, bike rider by passion. Listen to him as auto driver and a friend under conversations category.</string>
    <string name="title_Bharghavi">Bhargavi</string>
    <string name="about_bharghavi">\t Software Engineer by profession, classical musician by passion. She would love to dance and play sports! Listen to her voice as owner in owner-maid conversations.</string>
    <string name="title_samraddha">Samraddha</string>
    <string name="about_sammy">\tSoftware Engineer by profession, adventurist by passion! Listen to his voice as conductor, vendor etc under conversations.</string>
</resources>