<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.learnkannada.com.learnkannadakannadakali.MoreActivity">

    <ImageView
        android:id="@+id/moreLogoID"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:src="@drawable/logologo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:layout_below="@+id/moreLogoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/aboutKannadaID"
                android:text="@string/aboutKannada"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/aboutKarnatakaID"
                android:text="@string/aboutKarnataka"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/aboutHithAMID"
                android:text="@string/aboutHithAM"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/aboutVoiceArtist"
                android:text="@string/aboutVoiceArtist"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/settingsID"
                android:text="@string/action_settings"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
