<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleLayoutID"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/rateapp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/titleRateID"
            android:text="Spread the word"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/titleLayoutID"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rateTextID"
            android:text="@string/referFriends"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/noID"
                android:text="@string/no"
                android:layout_width="100dp"
                android:textSize="12sp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/laterID"
                android:text="@string/later"
                android:textSize="12sp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/sureID"
                android:text="@string/sure"
                android:textSize="12sp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>