<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.learnkannada.com.learnkannadakannadakali.AboutusActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/connectHereID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="#0645AD"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="4dp"
                android:text="@string/connect" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="10dp"
                android:background="#706c6c" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/varun" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/developer"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#706c6c" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/title_Varun"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/about_Varun"
                        android:textAlignment="textStart" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/rohith" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/developer"
                        android:textStyle="bold" />

                </LinearLayout>

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#706c6c" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/title_Rohith"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/about_Rohith"
                        android:textAlignment="textStart" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textColor="@color/orange_800"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/voicesBehind"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/pooja" />


                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#706c6c" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/title_Pooja"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:baselineAligned="false"
                        android:text="@string/about_pooja"
                        android:textAlignment="textStart" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ganesh" />


                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#706c6c" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/title_ganesh"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:baselineAligned="false"
                        android:text="@string/about_ganesh"
                        android:textAlignment="textStart" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/bharghavi" />


                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#706c6c" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/title_Bharghavi"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:baselineAligned="false"
                        android:text="@string/about_bharghavi"
                        android:textAlignment="textStart" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/sammy" />


                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="#706c6c" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/title_samraddha"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:baselineAligned="false"
                        android:text="@string/about_sammy"
                        android:textAlignment="textStart" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
