<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleLayoutID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rateapp" />

                <TextView
                    android:id="@+id/titleRateID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Loving Kannada kali?"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLayoutID"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rateTextID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/rateText"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/neverAskButtonID"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="#e93131"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/neverAsk"
                        android:textColor="#ffee"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/remindMeLaterID"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="#e9be14"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/remindLater"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/rateNowID"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="#5fdc2a"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/rateNow"
                        android:textColor="#ffee"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>